feat: added limitations

--- a/volume_1_pathways-to-the-world/guides/v0.md
+++ b/volume_1_pathways-to-the-world/guides/v0.md
@@ -101,3 +101,6 @@ Check out the repository for this guide here:
 *Contribute to ss251/v0-tutorial development by creating an account on GitHub.*github.com](https://github.com/ss251/v0-tutorial)
 
 v0 makes the UI design and development experience a breeze and if you’re a developer using Next.js looking to streamline your workflow, I highly recommend giving v0 a try.
+
+#### Limitations
+Generates code using React, Tailwind CSS, and shadcn/ui, which may not fit every project's design preferences; Might not generate the desired result without multiple iterations; Limited credits (200) to use on the free plan, can be upgraded with a Vercel Pro account; Image input with prompt is restricted to only the initial prompt and only takes in a single image prompt at the moment.
